--- a/src/app/modules/customer-account/customer-create-edit/customer-create-edit.component.html
+++ b/src/app/modules/customer-account/customer-create-edit/customer-create-edit.component.html
@@ -55,8 +55,11 @@
                     <mat-tab label="File logs">
                         <app-file-log></app-file-log>
                     </mat-tab>
-                    <mat-tab label="Reports">
+                    <!-- <mat-tab label="Reports">
                         <app-customer-reports></app-customer-reports>
+                    </mat-tab> -->
+                    <mat-tab label="Reporting">
+                        <app-reporter></app-reporter>
                     </mat-tab>
                     <mat-tab label="Emails">
                         <app-customer-emails></app-customer-emails>
