--- a/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.scss
+++ b/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.scss
@@ -19,3 +19,9 @@
     /* border: 2px solid hotpink; */
     min-width: 250px;
 }
+
+
+
+.theme-amber.light .mdc-data-table__row:hover {
+    background-color: var(--dynamicColor) !important;
+}
