Hello msg added to scss of customer-email

--- a/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.scss
+++ b/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.scss
@@ -8,7 +8,6 @@
 
 }
 
-
 .attr-row {
     display: flex;
     flex-direction: row;
@@ -25,3 +24,5 @@
 .theme-amber.light .mdc-data-table__row:hover {
     background-color: var(--dynamicColor) !important;
 }
+
+// Hello
