--- a/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.html
+++ b/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.html
@@ -1,4 +1,3 @@
-<!-- customer email component -->
 <div id="customer-emails-component" class="flex flex-col flex-auto min-w-0">
     <div>
         <div
@@ -205,7 +204,7 @@
                                         getRowBackgroundColor(row),
                                     '--dynamicColor':
                                         getRowBackgroundColor(row),
-                                   
+                                    color: white
                                 }"
                             >
                                 ></mat-row
