--- a/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.html
+++ b/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.html
@@ -1,4 +1,6 @@
 <!-- customer email component -->
+<!-- SECOND COMMENT IN CUSTOMER EMAIL COMPONENT -->
+<!-- ddd -->
 <div id="customer-emails-component" class="flex flex-col flex-auto min-w-0">
     <div>
         <div
