new branch comment is added.

--- a/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.html
+++ b/src/app/modules/customer-account/customer-create-edit/customer-emails/customer-emails.component.html
@@ -1,3 +1,4 @@
+<!-- I am inside new branch -->
 <div id="customer-emails-component" class="flex flex-col flex-auto min-w-0">
     <div>
         <div
